--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -14,8 +14,9 @@
 </div>
 <div class="container my-3">
   <div class="row">
-    <div class="offset-md-2 col-md-8 text-center">
-      <table class="table-sortable table table-hover table-inverse">
+    <div class="offset-md-2 col-md-8">
+      <h6>通知数：<%= @notifications.count %> <i class="fas fa-thumbtack"></i></h6>
+      <table class="table-sortable table table-hover table-inverse text-center">
         <%#= @say %>
         <thead>
             <tr>
@@ -23,7 +24,7 @@
               <td width="300px" style="white-space: nowrap;">タスク名</td>
               <td width="300px">通知内容</td>
               <td width="300px">通知日</td>
-              <td></td>
+              <td width="200px"></td>
             </tr>
         </thead>
         <tbody>
@@ -43,6 +44,7 @@
             <!--削除ボタン-->
             <td>
               <%= link_to notification_path(notification.id), method: :delete, data: { confirm: '本当に消しますか？' } do %>
+                <h7 style="color: #e65050;">削除</h7>
                 <i class="fas fa-trash-alt fa-1x"></i>
               <% end %>
             </td>
