--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           <li><%= link_to " マイページ ", user_path(current_user), class: "fas fa-user nav-link text-light" %></li>
           <li><%= link_to " ユーザー ", users_path, class: "fas fa-users nav-link text-light" %></li>
           <li><%= link_to " タスク ", tasks_path(user_id: current_user.id), class: "fas fa-tasks nav-link text-light" %></li>
-          <% if @notifications.count == 0 %>
+          <% if @notifications.blank? || @notifications.where(checked: false).count < 0 %>
             <li><%= link_to " 通知 ", notifications_path, class: "far fa-bell nav-link text-light" %></li>
           <% else %>
             <li><%= link_to " 通知 ", notifications_path, class: "fas fa-bell nav-link text-warning" %></li>
