--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -10,7 +10,7 @@
             <%= label :task_id, "タイトル", class:"form-title"%> : <%= @notification.task.title %>
           </div>
           <div class="form-group">
-            <%= label :action, "通知内容", class:"form-title"%> : <%= @notification.action %>
+            <%= label :action, "通知の", class:"form-title"%> : <%= @notification.action %>
           </div>
            <%= label :created_at, "通知日", class:"form-title"%> : <%= @notification.created_at.strftime("%Y-%m-%d / %H:%M:%S") %>
           <!--<div class="form-group">-->
