--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,12 @@
           <li><%= link_to " マイページ ", user_path(current_user), class: "fas fa-user nav-link text-light" %></li>
           <li><%= link_to " ユーザー ", users_path, class: "fas fa-users nav-link text-light" %></li>
           <li><%= link_to " タスク ", tasks_path(user_id: current_user.id), class: "fas fa-tasks nav-link text-light" %></li>
-          <% if @notifications.blank? || @notifications.where(checked: false).count < 0 %>
-            <li><%= link_to " 通知 ", notifications_path, class: "far fa-bell nav-link text-light" %></li>
+          <% if @notifications.blank? || @notifications.where(checked: false).count == 0 %>
+            <li><%= link_to " 通知 ", notifications_path, class: "far fa-bell nav-link text-light" %>
+                <span style="color: #f8f9fa;">(未読 : <%= @notifications.where(checked: false).count%>)</span></li>
           <% else %>
-            <li><%= link_to " 通知 ", notifications_path, class: "fas fa-bell nav-link text-warning" %></li>
+            <li><%= link_to " 通知 ", notifications_path, class: "fas fa-bell nav-link text-warning" %>
+                <span style="color: #ffc107;">(未読 : <%= @notifications.where(checked: false).count%>)</span></li>
           <% end %>
           <li><%= link_to " 楽天書籍検索 ", books_search_path, class: "fab fa-r-project nav-link text-light" %></li>
           <!--<li class= "far fa-calendar-alt nav-link text-light fx-1" > カレンダー </li>-->
