[fix] README.md and views

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,6 +2,17 @@
   <h4>タスク編集画面</h4>
 </div>
 
+<% if @task.errors.any? %>
+  <div id="error_explanation">
+    <h5><%= pluralize(@task.errors.count, "error") %> prohibited this task from being saved:</h5>
+    <ul>
+      <% @task.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class= "container" >
   <div class="row">
     <div class="col-md-4">
