--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -7,9 +7,9 @@
     <div class="offset-md-2 col-md-8 text-right">
 
     <%= link_to notification_destroy_all_path(current_user), method: :delete, data: { confirm: '全削除しますか？' } do %>
-        <i class="fas fa-dumpster-fire fa-2x"></i>
-        <h6>全削除</h6>
+        <i class="fas fa-dumpster-fire fa-2x" style="color: #e65050;"></i>
     <% end %>
+        <h6 style="color: #e65050;">全削除</h6>
 
     </div>
   </div>
@@ -17,12 +17,9 @@
 <div class="container my-3">
   <div class="row">
     <div class="offset-md-2 col-md-8">
-
-
-      <h6>通知数 : <%= @notifications.count %><i class="fas fa-thumbtack"></i></h6>
+      <h6>通知数 : <%= @notifications.count %><i class="fas fa-thumbtack mx-2"></i></h6>
       <h6>(未読 : <%= @notifications.where(checked: false).count%>) / (既読 : <%= @notifications.where(checked: true).count%>)</h6>
       <table class="table-sortable table table-hover table-inverse text-center">
-        <%#= @say %>
         <thead>
             <tr>
               <td width="100px"></td>
