--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -48,11 +48,11 @@
 <div class="container">
   <div class="row">
     <div class="offset-md-1 col-md-10">
-      <table class="table-sortable table table-hover table-inverse text-center"
-             style="margin-bottom: 70px;">
+      <table class="table-sortable table table-hover table-inverse text-center">
+      <h6>タスク数 : <%= @tasks.count %><i class="fas fa-thumbtack px-2"></i></h6>
         <thead>
           <tr>
-            <th width= "300px">タイトル(<%= @tasks.count %>)</th>
+            <th width= "300px">タイトル</th>
             <th width= "200px">優先度</th>
             <th width= "200px">進捗状況</th>
             <th width= "400px">期間</th>
@@ -76,16 +76,16 @@
               <% if task.user == current_user %>
                 <!--　編集画面へ遷移するボタン-->
                 <td width="250px">
-                <%= link_to edit_task_path(task.id) do %>
-                  <i class="fas fa-edit fa-1x"></i>
-                  <h7>編集</h7>
-                <% end %>
-                <!--　削除するボタン-->
-                <span>&nbsp;</span>
-                <%= link_to task_path(task), method: :delete, data: { confirm: '本当に消しますか？' } do %>
-                <h7 style="color: #e65050;">削除</h7>
-                <i class="fas fa-trash-alt fa-1x"></i>
-                <% end %>
+                  <%= link_to edit_task_path(task.id) do %>
+                    <i class="fas fa-edit fa-1x"></i>
+                    <h7>編集</h7>
+                  <% end %>
+                  <!--　削除するボタン-->
+                  <span>&nbsp;</span>
+                  <%= link_to task_path(task), method: :delete, data: { confirm: '本当に消しますか？' } do %>
+                    <h7 style="color: #e65050;">削除</h7>
+                    <i class="fas fa-trash-alt fa-1x"></i>
+                  <% end %>
                 </td>
             	<% end %>
             	</tr>
