--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,18 +52,6 @@
 }
 
 //----------ヘッダー----------//
-// main {
-//   // height: calc(100vh - 100px);
-//   height: 100vh;
-// }
-
-// .wrapper{
-//     min-height: 100vh;
-//     position: relative;/*←相対位置*/
-//     padding-bottom: 120px;/*←footerの高さ*/
-//     box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
-// }
-
 header {
   background: #333333;
   color: #ffffff;
@@ -75,6 +63,10 @@ body {
   display: flex;
   flex-flow: column;
   min-height: 100vh;
+
+  // 指定した幅で文章を強制的に改行させる
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 main {
