--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -36,12 +36,12 @@
   <div class="container">
     <div class="row">
       <div class="offset-2 col-md-7">
-        <h4 class="font">タスク管理をするならTodoリストを作ってみよう!</h4>
+        <h4 class="font shadow">タスク管理をするならTodoリストを作ってみよう!</h4>
         <br>
         <p>Todoリストとは、別名「やることリスト」ともいい、これからやるべきことをリスト化したものです。</p>
         <p>日々仕事をする上で出てくる、タスクの整理を可能とし、タスクを忘れないようにします。</p>
         <br>
-        <h4 class="font">ToDoリストが可能にすること</h4>
+        <h4 class="font shadow">ToDoリストが可能にすること</h4>
         <br>
         <p>多くの人は、ToDoリストは「やることをただ書き出しただけ」と勘違いしているかもしれません。</p>
         <p>しかし、ToDoリストを作ることで以下のような4つの効果があります。</p>
@@ -54,7 +54,7 @@
 
         <p>上記の4点を意識して、書き出してみよう！</p>
         <br>
-        <h4 class="font">ルーチンタスクを決めてみよう！</h4>
+        <h4 class="font shadow">ルーチンタスクを決めてみよう！</h4>
         <br>
         <P>
           ルーチンタスクとは「やることが具体的に定まったルーチンワーク」のことです。
