--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -10,9 +10,14 @@
             <%= label :task_id, "タイトル", class:"form-title"%> : <%= @notification.task.title %>
           </div>
           <div class="form-group">
-            <%= label :action, "通知の", class:"form-title"%> : <%= @notification.action %>
+            <%= label :task_id, "詳細", class:"form-title"%> : <%= @notification.task.details %>
           </div>
+          <div class="form-group">
+            <%= label :action, "通知の種類", class:"form-title"%> : <%= @notification.action %>
+          </div>
+          <div class="form-group">
            <%= label :created_at, "通知日", class:"form-title"%> : <%= @notification.created_at.strftime("%Y-%m-%d / %H:%M:%S") %>
+          </div>
           <!--<div class="form-group">-->
           <!--  < %= label :checked, "未読/既読", class:"form-title"%>-->
           <!--  < % if @notification.checked == true%>-->
