[fix] notifications/index

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -20,7 +20,7 @@
         <thead>
           <tr>
             <td width="100px"></td>
-            <td width="300px" style="white-space: nowrap;">タスク名</td>
+            <td width="300px" style="white-space: nowrap;">タイトル</td>
             <td width="300px">通知の種類</td>
             <td width="300px">通知日</td>
             <td width="200px"></td>
