--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,7 +20,7 @@
           <%= f.text_area :introduction, class: "form-control introduction" %>
         </div>
         <div class="form-group">
-          <%= f.submit "更新" ,class: "btn btn-success" %>
+          <%= f.submit "更新" ,class: "btn btn-success btn-sm" %>
         </div>
       <% end %>
     </div>
