[fix] tasks/index.html.erb

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -52,11 +52,11 @@
       <h6>タスク数 : <%= @tasks.count %><i class="fas fa-thumbtack px-2"></i></h6>
         <thead>
           <tr>
-            <th width= "300px">タイトル</th>
+            <th width= "500px">タイトル</th>
             <th width= "200px">優先度</th>
             <th width= "200px">進捗状況</th>
-            <th width= "400px">期間</th>
-            <th></th>
+            <th width= "500px">期間</th>
+            <th width= "500px"></th>
             <th></th>
           </tr>
         </thead>
